Fix/dependency upgrades (#355)
* Oppgraderer en rekke dependencies

* Erstatter bruk av deprecated metoder og fjerner ubrukte import statements

* drar inn stax-ex

* fjerner bruk av deprecated org.junit.Assert.assertThat

* Boolean.parseBoolean istedet for Boolean.valueOf

* refaktorering: generic -> primitive, omskriving til lambda, unødvendige throws, stream-forbedringer, unødvendige deklarasjoner, oppbygging av strings

* closer input- og outputstream